--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div id="palkanlaskenta" class="page">
             <h1>Palkanlaskenta</h1>
             <form class="form-grid" id="salaryForm" onsubmit="calculateSalary(); return false;">
-                <label>Nimi <input type="text" id="name" required></label>
+                <label>Henkilö <select id="henkiloSelect" required><option value="">Valitse henkilö</option></select></label>
                 <label>Tunnit <input type="number" id="hours" required></label>
                 <label>Tuntipalkka (€) <input type="number" id="rate" required></label>
                 <label>Iltalisä (€) <input type="number" id="evening" value="0"></label>
