--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
-<!DOCTYPE html><html><head><meta charset='UTF-8'><title>Testi</title></head><body><h1>Tämä on testi</h1></body></html>
+<!DOCTYPE html>
+<html lang="fi">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Palkkasovellus – Etusivu</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <h1>Palkkasovellus</h1>
+        <nav>
+            <ul>
+                <li><a href="#" onclick="showPage('palkanlaskenta')">Palkanlaskenta</a></li>
+                <li><a href="#" onclick="showPage('rekisterit')">Rekisterit</a></li>
+                <li><a href="#" onclick="showPage('raportit')">Raportit</a></li>
+                <li><a href="#" onclick="showPage('asetukset')">Asetukset</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main id="app">
+        <section id="welcome">
+            <h2>Tervetuloa Palkkasovellukseen</h2>
+            <p>Aloita valitsemalla toiminto ylävalikosta.</p>
+        </section>
+    </main>
+    <script src="script.js"></script>
+</body>
+</html>
