--- a/index.html
+++ b/index.html
@@ -1,29 +1,47 @@
 <!DOCTYPE html>
 <html lang="fi">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Palkkasovellus – Etusivu</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Palkkasovellus</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <header>
-        <h1>Palkkasovellus</h1>
-        <nav>
-            <ul>
-                <li><a href="#" onclick="showPage('palkanlaskenta')">Palkanlaskenta</a></li>
-                <li><a href="#" onclick="showPage('rekisterit')">Rekisterit</a></li>
-                <li><a href="#" onclick="showPage('raportit')">Raportit</a></li>
-                <li><a href="#" onclick="showPage('asetukset')">Asetukset</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main id="app">
-        <section id="welcome">
-            <h2>Tervetuloa Palkkasovellukseen</h2>
-            <p>Aloita valitsemalla toiminto ylävalikosta.</p>
-        </section>
-    </main>
-    <script src="script.js"></script>
+  <header>
+    <h1>Palkkasovellus</h1>
+    <nav>
+      <ul>
+        <li><a href="#" onclick="showPage('palkanlaskenta')">Palkanlaskenta</a></li>
+        <li><a href="#" onclick="showPage('rekisterit')">Rekisterit</a></li>
+        <li><a href="#" onclick="showPage('raportit')">Raportit</a></li>
+        <li><a href="#" onclick="showPage('asetukset')">Asetukset</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main id="app">
+    <section id="palkanlaskenta" class="page">
+      <h2>Palkanlaskenta</h2>
+      <table id="employee-table">
+        <thead>
+          <tr>
+            <th>Nimi</th>
+            <th>Sähköposti</th>
+            <th>Osoite</th>
+            <th>Toimipaikka</th>
+          </tr>
+        </thead>
+        <tbody>
+          <!-- työntekijät tulevat tähän -->
+        </tbody>
+      </table>
+    </section>
+    <section id="rekisterit" class="page" style="display:none;"><p>Rekisterit tulossa...</p></section>
+    <section id="raportit" class="page" style="display:none;"><p>Raportit tulossa...</p></section>
+    <section id="asetukset" class="page" style="display:none;"><p>Asetukset tulossa...</p></section>
+  </main>
+
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
