--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
   <main id="app">
     <section id="palkanlaskenta" class="page">
       <h2>Palkanlaskenta</h2>
+      <div id="error-message" style="color: red; margin: 1rem 0;"></div>
+      <button onclick="showForm()">Lisää työntekijä</button>
       <table id="employee-table">
         <thead>
           <tr>
@@ -29,16 +31,29 @@
             <th>Sähköposti</th>
             <th>Osoite</th>
             <th>Toimipaikka</th>
+            <th>Toiminnot</th>
           </tr>
         </thead>
-        <tbody>
-          <!-- työntekijät tulevat tähän -->
-        </tbody>
+        <tbody></tbody>
       </table>
     </section>
+
     <section id="rekisterit" class="page" style="display:none;"><p>Rekisterit tulossa...</p></section>
     <section id="raportit" class="page" style="display:none;"><p>Raportit tulossa...</p></section>
     <section id="asetukset" class="page" style="display:none;"><p>Asetukset tulossa...</p></section>
+
+    <div id="form-modal" class="modal" style="display:none;">
+      <div class="modal-content">
+        <h3 id="form-title">Työntekijän tiedot</h3>
+        <input type="hidden" id="emp-id" />
+        <input type="text" id="emp-nimi" placeholder="Nimi" />
+        <input type="email" id="emp-email" placeholder="Sähköposti" />
+        <input type="text" id="emp-osoite" placeholder="Osoite" />
+        <input type="text" id="emp-toimipaikka" placeholder="Toimipaikka" />
+        <button onclick="saveEmployee()">Tallenna</button>
+        <button onclick="closeForm()">Peruuta</button>
+      </div>
+    </div>
   </main>
 
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
