--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <th>Toiminnot</th>
           </tr>
         </thead>
-        <tbody></tbody>
+        <tbody id="henkilot-body"></tbody>
       </table>
     </section>
 
