--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="fi">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Palkkasovellus</title>
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -19,50 +18,16 @@
       </ul>
     </nav>
   </header>
-
   <main id="app">
-    <section id="palkanlaskenta" class="page">
-      <h2>Palkanlaskenta</h2>
-      <button onclick="showForm()">Lisää työntekijä</button>
-      <table>
-        <thead>
-          <tr>
-            <th>Nimi</th>
-            <th>Sähköposti</th>
-            <th>Osoite</th>
-            <th>Toimipaikka</th>
-            <th>Toiminnot</th>
-          </tr>
-        </thead>
-        <tbody id="henkilot-body"></tbody>
-      </table>
-    </section>
-
-    <section id="rekisterit" class="page" style="display:none;"><p>Rekisterit tulossa...</p></section>
-    <section id="raportit" class="page" style="display:none;"><p>Raportit tulossa...</p></section>
-    <section id="asetukset" class="page" style="display:none;"><p>Asetukset tulossa...</p></section>
-
+    <section id="palkanlaskenta" class="page"><table id="employee-table"><tbody></tbody></table></section>
+    <section id="rekisterit" class="page" style="display:none;"></section>
+    <section id="raportit" class="page" style="display:none;"></section>
+    <section id="asetukset" class="page" style="display:none;"></section>
     <section id="kello" class="page" style="display:none;">
-      <h2>Kello</h2>
-      <select id="employeeSelect">
-        <option value="">-- Valitse --</option>
-      </select>
+      <select id="employeeSelect"></select>
+      <div id="calendar"></div>
     </section>
-
-    <div id="form-modal" class="modal" style="display:none;">
-      <div class="modal-content">
-        <h3 id="form-title">Työntekijän tiedot</h3>
-        <input type="hidden" id="emp-id" />
-        <input type="text" id="emp-nimi" placeholder="Nimi" />
-        <input type="email" id="emp-email" placeholder="Sähköposti" />
-        <input type="text" id="emp-osoite" placeholder="Osoite" />
-        <input type="text" id="emp-toimipaikka" placeholder="Toimipaikka" />
-        <button onclick="saveEmployee()">Tallenna</button>
-        <button onclick="closeForm()">Peruuta</button>
-      </div>
-    </div>
   </main>
-
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
   <script src="script.js"></script>
 </body>
